✨ feature [#7]: 모임 API
