# routes/index.ts
@@ -3,6 +3,7 @@ import { logger } from '../config/logger'
 const router = Router()
 
 import eventRouter from './api/events'
+import reportsEventRouter from './api/reportEvents'
 import categoryRouter from './api/categories'
 import careerCategoryRouter from './api/careerCategories'
 import authRouter from './api/auth'
@@ -11,6 +12,7 @@ logger.info('API 라우터 올라옴')
 
 export const apiRouter = router
   .use('/events', eventRouter)
+  .use('/reports-event', reportsEventRouter)
   .use('/categories', categoryRouter)
   .use('/careerCategories', careerCategoryRouter)
   .use('/auth', authRouter)
