# swagger.yaml
@@ -8,6 +8,8 @@ servers:
 tags:
   - name: events
     description: 모임 API
+  - name: reports-event
+    description: 모임 신고 API
   - name: careerCategories
     description: 직업 카테고리 API
   - name: categories
@@ -20,6 +22,19 @@ paths:
         - events
       summary: 모임 목록
       description: 모임 목록을 가져오는 API
+      parameters:
+        - name: categoryId
+          in: query
+          description: 카테고리 ID
+          required: false
+          schema:
+            type: string
+        - name: subCategoryId
+          in: query
+          description: 서브 카테고리 ID
+          required: false
+          schema:
+            type: string
       responses:
         '200':
           description: 성공
@@ -217,13 +232,113 @@ paths:
         '5xx':
           description: 서버 에러
 
+  /reports-event:
+    get:
+      tags:
+        - reports-event
+      summary: 모임 신고 목록
+      description: 전체 모임 신고 목록을 가져오는 API
+      responses:
+        '200':
+          description: 성공
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Event_Complaint'
+        '4xx':
+          description: 잘못된 요청
+        '5xx':
+          description: 서버 에러
 
+    post:
+      tags:
+        - reports-event
+      summary: 모임 신고 등록
+      description: 모임 신고 등록하는 API
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                reporterId:
+                  type: number
+                  example: 1
+                  description: 유저 ID
+                eventId:
+                  type: number
+                  example: 1
+                  description: 모임 ID
+                description:
+                  type: string
+                  example: 이 모임을 신고합니다.
+                  description: 신고 내용
+        required: true
+      responses:
+        '201':
+          description: 성공
+        '4xx':
+          description: 잘못된 요청
+        '5xx':
+          description: 서버 에러
 
+  /reports-event/{eventId}:
+    get:
+      tags:
+        - reports-event
+      summary: 특정 모임 신고 목록
+      description: 특정 모임 신고 목록정보을 가져오는 API
+      parameters:
+        - name: eventId
+          in: path
+          description: 모임 ID
+          required: true
+          schema:
+            type: number
+      responses:
+        '200':
+          description: 성공
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Event_Complaint'
+        '4xx':
+          description: 잘못된 요청
+        '5xx':
+          description: 서버 에러
 
-
-
-
-
+  /reports-event/{eventId}/{reportId}:
+    get:
+      tags:
+        - reports-event
+      summary: 특정 모임 신고 상세
+      description: 특정 모임 신고 상세정보을 가져오는 API
+      parameters:
+        - name: eventId
+          in: path
+          description: 모임 ID
+          required: true
+          schema:
+            type: number
+        - name: reportId
+          in: path
+          description: 신고 ID
+          required: true
+          schema:
+            type: number
+      responses:
+        '200':
+          description: 성공
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Event_Complaint'
+        '4xx':
+          description: 잘못된 요청
+        '5xx':
+          description: 서버 에러
 
   /careerCategories:
     get:
@@ -659,6 +774,38 @@ components:
           type: string
           example: 2023-12-01
           description: 모임 종료 날짜
+        createdAt:
+          type: string
+          example: 2023-12-01T17:32:28Z
+          description: 등록날짜
+        updatedAt:
+          type: string
+          example: 2023-12-01T17:32:28Z
+          description: 수정날짜
+        deletedAt:
+          type: string
+          example: 2023-12-01T17:32:28Z
+          description: 삭제날짜
+
+    Event_Complaint:
+      type: object
+      properties:
+        id:
+          type: number
+          example: 1
+          description: Primary Key
+        eventId:
+          type: number
+          example: 1
+          description: 모임 ID
+        reporterId:
+          type: number
+          example: 1
+          description: 유저 ID
+        description:
+          type: string
+          example: 이 모임을 신고합니다.
+          description: 신고내용
         createdAt:
           type: string
           example: 2023-12-01T17:32:28Z
